--- a/css/index.css
+++ b/css/index.css
@@ -61,7 +61,7 @@ table th {
 .polaroid {
   float: left;
   width: 170px;
-  height: 170px;
+  height: 180px;
   padding: 10px;
   margin: 0 20px 20px 0;
   background-color: white;
@@ -76,7 +76,7 @@ table th {
 }
 .polaroid .head {
   text-align: center;
-  font-size: 15px;
+  font: 15px/20px sans-serif;
   font-weight: normal;
 }
 .polaroid:hover,
