--- a/css/index.less
+++ b/css/index.less
@@ -68,7 +68,7 @@ table {
 .polaroid {
   float: left;
   width: 170px;
-  height: 170px;
+  height: 180px;
   padding: 10px;
   margin: 0 20px 20px 0;
   background-color: white;
@@ -87,7 +87,7 @@ table {
 
 	.head {
 	  text-align: center;
-	  font-size: 15px;
+	  font: 15px/20px sans-serif;
 	  font-weight: normal;
 	}
 }
@@ -106,7 +106,7 @@ table {
 	}
 }
 
-// Layout 
+// --- Layout ---
 
 .container {
 	width: 1000px;
