--- a/css/index.less
+++ b/css/index.less
@@ -9,7 +9,7 @@
 
 @import 'lesshat';
 
-// --- Zakladna ---
+/* --- Zakladna --- */
 
 a img {
   border: 0;
@@ -73,6 +73,8 @@ table {
   margin: 0 20px 20px 0;
   background-color: white;
   color: darkgrey;
+  .border-radius(10px);
+  .box-shadow(5px 5px 10px rgba(0,0,0,.5));
 }
 
 .polaroid {
