--- a/css/index.less
+++ b/css/index.less
@@ -98,7 +98,7 @@ table {
 	&:hover,
 	&:focus,
 	&:active {
-	  background-color: #fcf883;
+		.gradient(linear-gradient(to bottom, rgba(254,252,234,1) 0%,rgba(241,218,54,1) 100%));
 	}
 
 	.polaroid:hover .head,
