--- a/css/index.less
+++ b/css/index.less
@@ -90,6 +90,7 @@ table {
 	.head {
 	  text-align: center;
 	  font: 15px/20px sans-serif;
+		font-family: 'Covered By Your Grace', cursive;		
 	  font-weight: normal;
 	}
 }
@@ -98,6 +99,7 @@ table {
 	&:hover,
 	&:focus,
 	&:active {
+		background: rgb(241,218,54);
 		.gradient(linear-gradient(to bottom, rgba(254,252,234,1) 0%,rgba(241,218,54,1) 100%));
 	}
 
