--- a/css/index.less
+++ b/css/index.less
@@ -101,6 +101,7 @@ table {
 	&:active {
 		background: rgb(241,218,54);
 		.gradient(linear-gradient(to bottom, rgba(254,252,234,1) 0%,rgba(241,218,54,1) 100%));
+		.transform(scale(1.2));
 	}
 
 	.polaroid:hover .head,
