--- a/css/index.less
+++ b/css/index.less
@@ -75,6 +75,7 @@ table {
   color: darkgrey;
   .border-radius(10px);
   .box-shadow(5px 5px 10px rgba(0,0,0,.5));
+  .transition(background 1s 0);
 }
 
 .polaroid {
